# WASM-Quine-Bootloader

./: .gitignore  CMakeLists.txt  PULL_REQUEST_DESCRIPTION.md  README.md  README_PORTING_SUMMARY.md  TODO.md  constants.ts  imgui.ini  index.html  metadata.json  setup.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: porting-issue.md  porting_report.md
.github/prompts/: add-react-component.prompt.md  add-wasm-opcode.prompt.md  build-project.prompt.md  debug-boot-sequence.prompt.md  dev_workflow.prompt.md  evolve-wasm-kernel.prompt.md  master_workflow.prompt.md  run-app.prompt.md  test-app.prompt.md  update-docs.prompt.md  update-specs.prompt.md
.github/skills/build-and-test/: SKILL.md
.github/skills/build-app/: SKILL.md
.github/skills/build-project/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/commit-push/: SKILL.md
.github/skills/find-memory/: SKILL.md
.github/skills/generate-report/: SKILL.md
.github/skills/improve-skills/: SKILL.md
.github/skills/improve-src/: SKILL.md
.github/skills/improve-tests/: SKILL.md
.github/skills/introspect-telemetry/: SKILL.md
.github/skills/repo-facts/: SKILL.md
.github/skills/run-app/: SKILL.md
.github/skills/run-sdl-gui/: SKILL.md
.github/skills/search-memory/: SKILL.md
.github/skills/setup-project/: SKILL.md
.github/skills/telemetry-review/: SKILL.md
.github/skills/test-app/: SKILL.md
.github/skills/timed-run/: SKILL.md
.github/skills/update-docs/: SKILL.md
.github/skills/update-issues/: SKILL.md
.github/skills/update-memory/: SKILL.md
.github/skills/update-skills/: SKILL.md
.github/skills/update-specs/: SKILL.md
_codeql_build_dir/: Makefile
_codeql_build_dir/test/: Makefile
cmake/: toolchain-windows-x64.cmake
components/: InstructionStream.tsx  MemoryVisualizer.tsx  SystemStatus.tsx
docs/: ISSUE_BODY_FOR_GITHUB.md  PORTING_REPORT.md  README.md  TESTS.md  architecture.md  design.md  workflows.md
docs/specs/: spec_cli.md  spec_heuristics.md  spec_multi.md  spec_neural.md  spec_telemetry.md
examples/: README.md  kill_kernel.wat  spawn_kernel.wat  weight_kernel.wat
scripts/: build.sh  run.sh  setup.sh  telemetry_analysis.py  test.sh  toolchain-mingw64.cmake
services/: wasmService.ts
src/: advisor.cpp  advisor.h  app.cpp  app.h  base64.h  cli.cpp  cli.h  colors.h  exporter.cpp  exporter.h  feature.cpp  feature.h  feature_extractor.cpp  feature_extractor.h  gui.cpp  gui.h  gui_colors.h  gui_heatmap.cpp  heatmap.cpp  log.cpp  logger.cpp  logger.h  loss.cpp  main.cpp  mutation_advisor.cpp  mutation_advisor.h  policy.h  train.cpp  train.h  types.h  util.cpp  util.h  wasm_evolution.cpp  wasm_evolution.h  wasm_kernel.cpp  wasm_kernel.h  wasm_parser.cpp
src/core/: advisor.cpp  advisor.h  app.cpp  app.h  cli.h  constants.h  exporter.cpp  feature.cpp  feature.h  loss.cpp  policy.cpp  policy.h  train.cpp  train.h  util.cpp
src/gui/: heatmap.cpp  panels.cpp  window.cpp  window.h  window_panels.cpp
src/nn/: advisor.cpp  feature.cpp  train.cpp  train.h
src/wasm/: evolution.cpp  evolution.h  kernel.cpp  kernel.h  parser.cpp  parser.h  wasm_evolution.cpp  wasm_evolution.h  wasm_kernel.cpp  wasm_parser.cpp
test/: CMakeLists.txt  README.md  test_advisor.cpp  test_app.cpp  test_cli.cpp  test_cli_behavior.cpp  test_evolution.cpp  test_examples.cpp  test_export.cpp  test_feature.cpp  test_loss.cpp  test_policy.cpp  test_state.cpp  test_train.cpp  test_training_phase.cpp  test_util_dpi.cpp  test_wasm.cpp
utils/: wasmEvolution.ts  wasmParser.ts
web/: App.tsx  package.json  types.ts
web/components/: TerminalLog.tsx
